# phala-tee-cloud-avs

./: .gitignore  Cargo.toml  Dockerfile  README.md  foundry.toml  remappings.txt
contracts/src/: PhalaServiceManager.sol  PhalaSlaOracle.sol
contracts/src/interfaces/: IPhalaServiceManager.sol  IPhalaSlaOracle.sol
phala-tee-cloud-avs-bin/: Cargo.toml  avs_contracts.json  build.rs  core_contracts.json
phala-tee-cloud-avs-bin/src/: main.rs
phala-tee-cloud-avs-lib/: Cargo.toml
phala-tee-cloud-avs-lib/src/: context.rs  error.rs  jobs.rs  lib.rs  tee.rs
phala-tee-cloud-avs-lib/src/aggregator/: client.rs  context.rs  task.rs
phala-tee-cloud-avs-lib/tests/: e2e.rs
