[workspace]
resolver = "2"
members = ["phala-tee-cloud-avs-lib", "phala-tee-cloud-avs-bin"]

[workspace.package]
version = "0.1.0"
description = "A Tangle Blueprint for an Eigenlayer AVS for Phala TEE Cloud"
edition = "2024"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/phala-tee-cloud-avs"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
phala-tee-cloud-avs-blueprint-lib = { path = "phala-tee-cloud-avs-lib" }

blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", default-features = false }
tokio = { version = "1.45.1", default-features = false }
color-eyre = { version = "0.6.3", default-features = false }
tower = { version = "0.5.2", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

cron = { version = "0.15.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.3", default-features = false }
jsonrpc-core = { version = "18.0.0", default-features = false }
jsonrpc-http-server = { version = "18.0.0", default-features = false }
libp2p = { version = "0.55.0", default-features = false }
reqwest = { version = "0.12.7", default-features = false }
url = { version = "2.5.2", default-features = false }
serde = { version = "1.0.215", default-features = false }
serde_json = { version = "1.0.115", default-features = false }
uuid = { version = "1.15.0", features = ["v4"], default-features = false }
bip39 = { version = "2.1.0", default-features = false }
thiserror = { version = "2.0.6", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
eigenlayer-contract-deployer = { version = "0.1.0", default-features = false }
